Spookd sum more bones

--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
 		{
 			self.randomText = ["#2SPOOKY4U", "[spookiness intentensifies]", "The Ride Never Ends"];
 
-			var x = (Math.random()*100) + "%";
-			var y = (Math.random()*100) + "%";
+			var x = ((Math.random()*120)-20) + "%";
+			var y = ((Math.random()*120)-20) + "%";
 			var r = Math.floor(Math.random()*256);
 			var g = Math.floor(Math.random()*256);
 			var b = Math.floor(Math.random()*256);
